<h3>September 13, 2017</h3>
<b><u>VIPPY</u></b>
 - Improved character tracking. Hopefully, this fixed some bugs for people with multiple access-groups.
 - Fixed an issue where manually refreshing your character location could log you out of Vippy.



<h3>September 7, 2017</h3>
<b><u>MAP</u></b>
 - Fixed a bug in Chrome where left-click and right-click did not work.
 - Improved responsiveness and map update speed when jumping systems.
 - Improved auto-naming feature for 'naming by letters' scheme. When jumping an unmapped system, Vippy will now correctly name the new system when there are multiple unmapped systems.



<h3>August 30, 2017</h3>
<b><u>MAP</u></b>
 - Add special drifter icon on the map. Add/Edit drifters through the context menu on C5 or C6 wormholes.
 - Add 'rally point broadcast' function. Available via the context menu.

<b><u>DISCORD</u></b>
 - I've setup a Vippy <a href="/vippy/contact" target="_blank">Discord</a> server. Hopefully, this will reduce the amount of eve mail I get, eve mail is a pain to work with.



<h3>August 7, 2017</h3>
<b><u>VIPPY</u></b>
 - I am (more or less) done with the back-end rework and new subscription model.
   <strong>Starting in September</strong> VIPPY will start automatically calculating your monthly subscription, based on the amount of your groups active users.
   You can find a more detailed description on the <a href="/help/subscription">help pages</a>. Please get in touch if you have additional questions or concerns.

<b><u>MAP</u></b>
<b>System Contextmenu</b>
 - Moved 'remove connected systems' futher down to (hopefully) prevent accidental clicks. Even though there is a confirmation dialog...
 - Add an option to rename a system, rather having to do it from the (cumbersome) form at the bottom right of the page.
 - Changed the 'remove from known systems' to 'edit known systems'.



<h3>July 12, 2017</h3>
<b><u>CREST</u></b>
 - Fixed the error when adding a fleet.

<b><u>VIPPY</u></b>